--- a/moka-machine-rs/app/Cargo.toml
+++ b/moka-machine-rs/app/Cargo.toml
@@ -11,6 +11,7 @@ rp-pico = "0.5.0"
 # seeeduino-xiao-rp2040 = "0.2.0"
 alloc-cortex-m = "0.4.2"
 rtt-target = { version = "0.3.1", features = ["cortex-m"] }
+libm = "0.2.5"
 fugit = "0.3.6"
 
 mlx9061x = "0.2.0"
